change project structure java.lang.module.FindException: just remove the module-info.java in valentine-starter